# src/api/service/searchService.js
@@ -1,5 +1,5 @@
 const { SUPER_ADMIN, PATIENT } = require("../constants/roles.const.js");
-const { Users, Roles } = require("../models/index.js");
+const { Users, Medicines, Roles } = require("../models/index.js");
 const bcryptService = require("../utils/bcrypt.js");
 const { Op } = require("sequelize");
 
@@ -42,6 +42,36 @@ const searchUserByKeywords = async (req) => {
   });
 };
 
+const searchMedicineByKeywords = async (req) => {
+  const key_words = req.query.key_words || false;
+  const hospital_id = req.headers.hospital_id || false;
+  const role_id_requester = req.headers.role_id || false;
+
+  let where = {};
+
+  if (key_words) {
+    where[Op.or] = [
+      { name: { [Op.iLike]: `%${key_words}%` } },
+      { article_number: { [Op.iLike]: `%${key_words}%` } },
+      { manufacturer: { [Op.iLike]: `%${key_words}%` } },
+    ];
+  }
+
+  if (role_id_requester !== SUPER_ADMIN) {
+    //IF NOT LOOKING FOR PATIENT, THEN ONLY SHOW IT OWNS HOSPITAL USER LIST
+    where.hospital_id = hospital_id;
+  }
+  console.log(where, "<<====where");
+
+  return await Medicines.findAll({
+    where,
+    // attributes: {
+    //   exclude: ["doctor_id", "patient_id", "admin_id", "password"],
+    // },
+  });
+};
+
 module.exports = {
   searchUserByKeywords,
+  searchMedicineByKeywords,
 };
