# src/config/apidocs.json
@@ -762,6 +762,38 @@
                 }
 			}
 		},
+		"/api/search/medicines": {
+			"get": {
+				"tags": ["Search"],
+				"summary": "Search entity medicines by keywords",
+				"security": [
+                    {
+                        "bearer": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "name": "key_words",
+                        "in": "query",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "description": "search by first_name,last_name, phone_Number or id_number"
+                    }
+                ],
+				"responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                }
+			}
+		},
 		"/api/schedules/{id}": {
             "get": {
                 "tags": ["Schedules"],
